--- a/CSS/demo/test.css
+++ b/CSS/demo/test.css
@@ -1,7 +1,30 @@
+/* .greenbox{
+    background-color:green;
+    width:100px;
+    height:100px;
+} */
+
 .greenbox{
     background-color:green;
     width:300px;
     height:300px;
+    border:10px solid;
+}
+
+img{
+    width:200px;
+    height:200px;
 }
 
 
+.redbox{
+    background-color:red;
+    width:300px;
+    height:300px;
+    border:10px solid black;
+}
+
+
+/* #parent{
+    border:solid red 2px;
+} */
