--- a/CSS/boxmodel/test.css
+++ b/CSS/boxmodel/test.css
@@ -38,3 +38,18 @@ body{
     background-color:grey;
 }
 
+
+ /* .grid-container {
+    display:grid;
+    padding:30px;
+    background-color: #E9F3F8;
+    grid-template-columns: 450px auto 450px;
+    grid-template-rows: 50px auto 50px;
+    border: 2px solid #000;
+  }
+
+
+  .grid-container > div {
+    background-color: #F59100;
+    border: 2px solid #000;
+  } */
