added demo for session

--- a/Python/Flask/demo/templates/index.html
+++ b/Python/Flask/demo/templates/index.html
@@ -4,6 +4,8 @@
     </head>
 
     <body>
-       <h1>{{ number }}</h1>
+       <h1>Username: {{ session.username }}</h1>
+
+       <h1>Password: {{ session.password }}</h1>
     </body>
 </html>
