--- a/Python/FullStack Flask /fsf1_2/templates/index.html
+++ b/Python/FullStack Flask /fsf1_2/templates/index.html
@@ -4,6 +4,7 @@
     </head>
 
     <body>
+        <h1>Register:</h1>
         <form action="/createuser" method="POST">
             <label>First Name:</label> <br>
             <input type="text" name="first_name"><br>
@@ -22,5 +23,17 @@
 
             <input type="submit" value="Submit!">
         </form>
+
+        <h1>Login:</h1>
+        <form action="/login" method="POST">
+            <label>User Name:</label> <br>
+            <input type="text" name="user_name"><br>
+
+            <label>Password:</label> <br>
+            <input type="password" name="password"><br>
+
+            <input type="submit" value="Submit!">
+        </form>
+
     </body>
 </html>
