--- a/Python/FullStack Flask /demo/templates/index.html
+++ b/Python/FullStack Flask /demo/templates/index.html
@@ -1,11 +1,39 @@
 <html>
     <head>
-
+        <title>FSF1</title>
     </head>
 
     <body>
-       <h1>Username: {{ session.username }}</h1>
+        <h1>Register:</h1>
+        <form action="/createuser" method="POST">
+            <label>First Name:</label> <br>
+            <input type="text" name="first_name"><br>
 
-       <h1>Password: {{ session.password }}</h1>
+            <label>Last Name:</label> <br>
+            <input type="text" name="last_name"><br>
+
+            <label>User Name:</label> <br>
+            <input type="text" name="user_name"><br>
+
+            <label>Email:</label> <br>
+            <input type="email" name="email"><br>
+
+            <label>Password:</label> <br>
+            <input type="password" name="password"><br>
+
+            <input type="submit" value="Submit!">
+        </form>
+
+        <h1>Login:</h1>
+        <form action="/login" method="POST">
+            <label>User Name:</label> <br>
+            <input type="text" name="user_name"><br>
+
+            <label>Password:</label> <br>
+            <input type="password" name="password"><br>
+
+            <input type="submit" value="Submit!">
+        </form>
+
     </body>
 </html>
