--- a/Python/Django/first_project/demo/templates/index.html
+++ b/Python/Django/first_project/demo/templates/index.html
@@ -3,6 +3,8 @@
     <label>Name: </label>
     <input type="text" name ="name"> </br>
 
+    <label>Email: </label>
+    <input type="email" name ="email"> </br>
 
     <input type="submit" value="Submit">
 </form>
