--- a/Python/Django/first_project/djA9/templates/index.html
+++ b/Python/Django/first_project/djA9/templates/index.html
@@ -28,7 +28,7 @@
                     <td>{{user.created_date}}</td>
                     <td>
                         <a href="/showuser/{{user.id}}">Show</a>
-                        <a href="/edituser/{{user.id}}">Edit</a>
+                        <a href="/edituserform/{{user.id}}">Edit</a>
                         <a href="/deleteuser/{{user.id}}">Delete</a>
                     </td>
                 </tr>
