--- a/Python/Django/first_project/djA9/templates/showuser.html
+++ b/Python/Django/first_project/djA9/templates/showuser.html
@@ -3,5 +3,5 @@
 <h2>Email: {{user.email}}</h2>
 <h2>Created At: {{user.created_date}}</h2>
 
-<a href="/edituser/{{user.id}}">Edit |</a>
+<a href="/edituserform/{{user.id}}">Edit |</a>
 <a href="/deleteuser/{{user.id}}">Delete</a>
